envoy-gateway/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-envoy-service
spec:
  type: ClusterIP
  selector:
    app: nginx-envoy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
