envoy-gateway/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-envoy-httproute
spec:
  parentRefs:
    # reference the gateway resource name as defined in envoy-gateway/gateway.yaml
    # or change this to match your gateway name
    - name: example-gateway
  hostnames:
    - "my.example.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: nginx-envoy-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
